--- a/index.html
+++ b/index.html
@@ -60,18 +60,7 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-    </div>
-
-    <div class="row">
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
@@ -80,7 +69,7 @@
     <div class="row">
       <div class="seat"></div>
       <div class="seat"></div>
-      <div class="seat"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
@@ -95,13 +84,24 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat"></div>
+    </div>
+
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
     </div>
-    
-
 
   </div>
+
+  <p class="text">You have selected<span id="count">0</span>seats for a price of $<span id="total">0</span></p>
 
   <script src="scripts.js"></script>
 </body>
