--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
   </div>
 
   <ul class="showcase">
-    <li class="seat">
+    <li>
+      <div class="seat"></div>
       <small>N/A</small>
     </li>
-    <li class="seat selected">
+    <li>
+      <div class="seat selected"></div>
       <small>Selected</small>
     </li>
-    <li class="seat occupied">
+    <li>
+      <div class="seat occupied"></div>
       <small>occupied</small>
     </li>
   </ul>
