--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   </div>
 
-  <p class="text">You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span></p>
+  <p class="text">Selected <span id="count">0</span> Seats - Total price: $<span id="total">0</span></p>
 
   <script src="scripts.js"></script>
 </body>
