--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div class="movie-container">
     <label>Pick a movie</label>
     <select id="movie">
-      <option value="8">Avengers: Endgame ($8)</option>
-      <option value="9">Joker ($9)</option>
-      <option value="10">Toy Story ($10)</option>
-      <option value="12">The Lion King ($12)</option>
+      <option value="8">Black Panther ($8)</option>
+      <option value="9">Bloodshot ($9)</option>
+      <option value="10">The Hunt ($10)</option>
+      <option value="12">The Invisible Man ($12)</option>
     </select>
   </div>
 
