--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <select id="movie">
       <option value="8">Black Panther ($8)</option>
       <option value="9">Bloodshot ($9)</option>
-      <option value="10">The Hunt ($10)</option>
+      <option value="10">The Huntsman ($10)</option>
       <option value="12">The Invisible Man ($12)</option>
     </select>
   </div>
